; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_psnr.c_get_psnr.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_psnr.c_get_psnr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double, double, i32)* @get_psnr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @get_psnr(double %0, double %1, i32 %2) #0 {
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  %6 = alloca i32, align 4
  store double %0, double* %4, align 8
  store double %1, double* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = call double @pow_2(i32 %7)
  %9 = load double, double* %4, align 8
  %10 = load double, double* %5, align 8
  %11 = fdiv double %9, %10
  %12 = fdiv double %8, %11
  %13 = call double @log10(double %12) #3
  %14 = fmul double 1.000000e+01, %13
  ret double %14
}

; Function Attrs: nounwind
declare dso_local double @log10(double) #1

declare dso_local double @pow_2(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
